kubernetes/apps/default/immich/app/server/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: default
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Immich
    gethomepage.dev/group: Photos
    gethomepage.dev/icon: immich.png
    gethomepage.dev/description: Manage Photos
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames: ["photos.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-public
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
    - name: internal
      namespace: networking
      sectionName: https
  hostnames: ["photos.${PUBLIC_DOMAIN}"]
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
